--- a/configs/Template-LBBDM-f16.yaml
+++ b/configs/Template-LBBDM-f16.yaml
@@ -1,23 +1,23 @@
 # Latent Brownian Bridge Diffusion Model Template(Latent Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 100
-  n_steps: 200000
-  save_interval: 2
-  sample_interval: 2
-  validation_interval: 2
+  n_epochs: 2000
+  n_steps: 1980000
+  save_interval: 1000
+  sample_interval: 10
+  validation_interval: 1
   accumulate_grad_batches: 4
 
 testing:
   clip_denoised: False
-  sample_num: 5
+  sample_num: 170
 
 data:
-  dataset_name: 'dataset_name'
+  dataset_name: 'data'
   dataset_type: 'custom_aligned'
   dataset_config:
-    dataset_path: 'dataset_path'
-    image_size: 256
+    dataset_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data'
+    image_size: 496
     channels: 3
     to_normal: True
     flip: True
@@ -32,7 +32,7 @@ data:
     # shuffle: False
 
 model:
-  model_name: "LBBDM-f16" # part of result path
+  model_name: "LBBDM-f16-4th" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -53,7 +53,7 @@ model:
 
   VQGAN:
     params:
-      ckpt_path: 'results/VQGAN/CelebAMaskHQ-f16.ckpt'
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data/model-f16.ckpt'
       embed_dim: 8
       n_embed: 16384
       ddconfig:
@@ -79,9 +79,9 @@ model:
 
   BB:
     optimizer:
-      weight_decay: 0.000
+      weight_decay: 0.01
       optimizer: 'Adam'
-      lr: 1.e-4
+      lr: 5.e-5
       beta1: 0.9
 
     lr_scheduler:
@@ -94,7 +94,7 @@ model:
     params:
       mt_type: 'linear' # options {'linear', 'sin'}
       objective: 'grad' # options {'grad', 'noise', 'ysubx'}
-      loss_type: 'l1' # options {'l1', 'l2'}
+      loss_type: 'l2' # options {'l1', 'l2'}
 
       skip_sample: True
       sample_type: 'linear' # options {"linear", "sin"}
@@ -105,7 +105,7 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 16
+        image_size: 32
         in_channels: 8
         model_channels: 128
         out_channels: 8
