--- a/configs/Template-LBBDM-f16.yaml
+++ b/configs/Template-LBBDM-f16.yaml
@@ -1,10 +1,10 @@
 # Latent Brownian Bridge Diffusion Model Template(Latent Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 2000
-  n_steps: 1980000
-  save_interval: 1000
-  sample_interval: 10
+  n_epochs: 1000
+  n_steps: 990000
+  save_interval: 10
+  sample_interval: 2
   validation_interval: 1
   accumulate_grad_batches: 4
 
@@ -18,7 +18,7 @@ data:
   dataset_config:
     dataset_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data'
     image_size: 496
-    channels: 3
+    channels: 1
     to_normal: True
     flip: True
   train:
@@ -53,22 +53,21 @@ model:
 
   VQGAN:
     params:
-      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data/model-f16.ckpt'
-      embed_dim: 8
-      n_embed: 16384
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/checkpoints/vqgan-epoch=19-val_rec_loss=0.00.ckpt'
+      embed_dim: 32
+      n_embed: 256
       ddconfig:
         double_z: false
-        z_channels: 8
-        resolution: 256
-        in_channels: 3
-        out_ch: 3
-        ch: 128
+        z_channels: 32
+        resolution: 512
+        in_channels: 1
+        out_ch: 1
+        ch: 64
         ch_mult: !!python/tuple
           - 1
-          - 1
-          - 2
           - 2
           - 4
+          - 8
         num_res_blocks: 2
         attn_resolutions:
           - 16
@@ -105,10 +104,10 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 32
-        in_channels: 8
-        model_channels: 128
-        out_channels: 8
+        image_size: 64
+        in_channels: 1
+        model_channels: 64
+        out_channels: 1
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
           - 16
