--- a/configs/Template-LBBDM-f4.yaml
+++ b/configs/Template-LBBDM-f4.yaml
@@ -1,38 +1,38 @@
 # Latent Brownian Bridge Diffusion Model Template(Latent Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 100
-  n_steps: 200000
-  save_interval: 2
+  n_epochs: 1000
+  n_steps: 990000
+  save_interval: 50
   sample_interval: 2
-  validation_interval: 2
-  accumulate_grad_batches: 4
+  validation_interval: 1
+  accumulate_grad_batches: 1
 
 testing:
-  clip_denoised: False
-  sample_num: 5
+  clip_denoised: True
+  sample_num: 170
 
 data:
-  dataset_name: 'dataset_name'
+  dataset_name: 'data'
   dataset_type: 'custom_aligned'
   dataset_config:
-    dataset_path: 'dataset_path'
-    image_size: 256
-    channels: 3
-    to_normal: True
-    flip: False
+    dataset_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data'
+    image_size: 512
+    channels: 1
+    to_normal: False
+    flip: True
   train:
-    batch_size: 8
+    batch_size: 1
     shuffle: True
   val:
-    batch_size: 8
-    shuffle: True
+    batch_size: 1
+    shuffle: False
   test:
-    batch_size: 8
+    batch_size: 1
     # shuffle: False
 
 model:
-  model_name: "LBBDM-f4" # part of result path
+  model_name: "LBBDM-f4-1st" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -53,22 +53,21 @@ model:
 
   VQGAN:
     params:
-      ckpt_path: 'results/VQGAN/CelebAMaskHQ-f4.ckpt'
-      embed_dim: 3
-      n_embed: 8192
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/all_images_3rd/checkpoints/vqgan_epoch_20.ckpt'
+      embed_dim: 32
+      n_embed: 256
       ddconfig:
         double_z: false
-        z_channels: 3
-        resolution: 256
-        in_channels: 3
-        out_ch: 3
+        z_channels: 32
+        resolution: 512
+        in_channels: 1
+        out_ch: 1
         ch: 128
         ch_mult: !!python/tuple
-          - 1
           - 2
           - 4
         num_res_blocks: 2
-        attn_resolutions: [ ]
+        attn_resolutions: []
         dropout: 0.0
 
       lossconfig:
@@ -102,10 +101,10 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 64
-        in_channels: 3
+        image_size: 128
+        in_channels: 32
         model_channels: 128
-        out_channels: 3
+        out_channels: 32
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
           - 32
@@ -119,8 +118,8 @@ model:
         dims: 2
         num_heads: 8
         num_head_channels: 64
-        use_scale_shift_norm: True
-        resblock_updown: True
+        use_scale_shift_norm: False
+        resblock_updown: False
         use_spatial_transformer: False
         context_dim:
         condition_key: "nocond" # options {"SpatialRescaler", "first_stage", "nocond"}
