--- a/configs/Template-LBBDM-f4.yaml
+++ b/configs/Template-LBBDM-f4.yaml
@@ -1,12 +1,12 @@
 # Latent Brownian Bridge Diffusion Model Template(Latent Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 2000
-  n_steps: 1980000
+  n_epochs: 1000
+  n_steps: 990000
   save_interval: 50
-  sample_interval: 10
+  sample_interval: 2
   validation_interval: 1
-  accumulate_grad_batches: 4
+  accumulate_grad_batches: 1
 
 testing:
   clip_denoised: True
@@ -18,21 +18,21 @@ data:
   dataset_config:
     dataset_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data'
     image_size: 496
-    channels: 3
-    to_normal: True
+    channels: 1
+    to_normal: False
     flip: True
   train:
-    batch_size: 2
+    batch_size: 1
     shuffle: True
   val:
-    batch_size: 2
+    batch_size: 1
     shuffle: False
   test:
-    batch_size: 2
+    batch_size: 1
     shuffle: False
 
 model:
-  model_name: "LBBDM-f4" # part of result path
+  model_name: "LBBDM-f4-1st" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -53,18 +53,17 @@ model:
 
   VQGAN:
     params:
-      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data/model.ckpt'
-      embed_dim: 3
-      n_embed: 8192
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/all_images_3rd/checkpoints/vqgan_epoch_20.ckpt'
+      embed_dim: 32
+      n_embed: 256
       ddconfig:
         double_z: false
-        z_channels: 3
+        z_channels: 32
         resolution: 512
-        in_channels: 3
-        out_ch: 3
+        in_channels: 1
+        out_ch: 1
         ch: 128
         ch_mult: !!python/tuple
-          - 1
           - 2
           - 4
         num_res_blocks: 2
@@ -76,9 +75,9 @@ model:
 
   BB:
     optimizer:
-      weight_decay: 0.01
+      weight_decay: 0.0
       optimizer: 'Adam'
-      lr: 5.e-5
+      lr: 1.e-4
       beta1: 0.9
 
     lr_scheduler:
@@ -90,8 +89,8 @@ model:
 
     params:
       mt_type: 'linear' # options {'linear', 'sin'}
-      objective: 'noise' # options {'grad', 'noise', 'ysubx'}
-      loss_type: 'l2' # options {'l1', 'l2'}
+      objective: 'grad' # options {'grad', 'noise', 'ysubx'}
+      loss_type: 'l1' # options {'l1', 'l2'}
 
       skip_sample: True
       sample_type: 'linear' # options {"linear", "sin"}
@@ -103,9 +102,9 @@ model:
 
       UNetParams:
         image_size: 128
-        in_channels: 6
+        in_channels: 32
         model_channels: 128
-        out_channels: 3
+        out_channels: 32
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
           - 32
@@ -120,8 +119,8 @@ model:
         dims: 2
         num_heads: 8
         num_head_channels: 64
-        use_scale_shift_norm: True
-        resblock_updown: True
+        use_scale_shift_norm: False
+        resblock_updown: False
         use_spatial_transformer: False
         context_dim:
-        condition_key: "SpatialRescaler" # options {"SpatialRescaler", "first_stage", "nocond"}
+        condition_key: "nocond" # options {"SpatialRescaler", "first_stage", "nocond"}
