--- a/configs/Template-LBBDM-f4.yaml
+++ b/configs/Template-LBBDM-f4.yaml
@@ -32,7 +32,7 @@ data:
     # shuffle: False
 
 model:
-  model_name: "LBBDM-f4-1st" # part of result path
+  model_name: "LBBDM-f4-4th" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -53,25 +53,27 @@ model:
 
   VQGAN:
     params:
-      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/reconstruction_new_embed_dim_32_shorter_architecture/checkpoints/vqgan_epoch_50.ckpt'
-      embed_dim: 32
-      n_embed: 16384
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/vqgan-latest-prova/outputs/checkpoints/vqgan_epoch_30.pt'
+      embed_dim: 4
+      n_embed: 1024
       ddconfig:
         double_z: false
-        z_channels: 32
+        z_channels: 4
         resolution: 512
         in_channels: 1
         out_ch: 1
-        ch: 256
+        ch: 64
         ch_mult: !!python/tuple
           - 1
           - 2
+          - 4
+          - 8
         num_res_blocks: 2
         attn_resolutions: []
         dropout: 0.0
 
       lossconfig:
-        target: torch.nn.Identity
+        target: vqperceptual.VQLPIPSWithDiscriminator
 
   BB:
     optimizer:
@@ -101,10 +103,10 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 128
-        in_channels: 32
+        image_size: 32
+        in_channels: 4
         model_channels: 128
-        out_channels: 32
+        out_channels: 4
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
           - 32
