trying different configurations

--- a/configs/Template-LBBDM-f4.yaml
+++ b/configs/Template-LBBDM-f4.yaml
@@ -1,12 +1,12 @@
 # Latent Brownian Bridge Diffusion Model Template(Latent Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 1000
-  n_steps: 990000
-  save_interval: 50
-  sample_interval: 50
+  n_epochs: 4000
+  n_steps: 3960000
+  save_interval: 10
+  sample_interval: 10
   validation_interval: 1
-  accumulate_grad_batches: 1
+  accumulate_grad_batches: 4
 
 testing:
   clip_denoised: True
@@ -36,13 +36,13 @@ data:
     shuffle: False
 
 model:
-  model_name: "LBBDM-f4-2nd" # part of result path
+  model_name: "LBBDM-latest-8th" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
   only_load_latent_mean_std: False
-  # model_load_path:  # model checkpoint path
-  # optim_sche_load_path:  # optimizer scheduler checkpoint path
+  # model_load_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/results/data/LBBDM-latest-7th/checkpoint/latest_model_300.pth' # model checkpoint path
+  # optim_sche_load_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/results/data/LBBDM-latest-7th/checkpoint/latest_optim_sche_300.pth' # optimizer scheduler checkpoint path
 
   EMA:
     use_ema: True
@@ -53,35 +53,35 @@ model:
   CondStageParams:
     n_stages: 2  # this has to be equal to the number of downsampling layers, because at every stage we downsize the conditioning image by half
     in_channels: 1  # input channels is 1 because the input image is the original conditioning image in the pixel space
-    out_channels: 32  # output channels is 32 because it has to match the latent dimension in order to then concatenate it to the latent encoding of x
+    out_channels: 8  # output channels is 32 because it has to match the latent dimension in order to then concatenate it to the latent encoding of x
 
   VQGAN:
     params:
-      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/reconstruction_new_embed_dim_32_shorter_architecture/checkpoints/vqgan_epoch_50.ckpt'
-      embed_dim: 32
-      n_embed: 16384
+      ckpt_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/vqgan-2layers-embeddim-8-num-embed-16384/checkpoints/vqgan_best_checkpoint.ckpt' # '/home/simone.sarrocco/thesis/project/models/diffusion_model/GenerativeModels/tutorials/generative/2d_vqgan/vqgan-2layers-embeddim-32-num-embed-16384/checkpoints/vqgan_epoch_50.ckpt'
+      embed_dim: 8 # 32
+      n_embed: 16384 # 16384
       ddconfig:
         double_z: false
-        z_channels: 32
+        z_channels: 8 # 32
         resolution: 512
         in_channels: 1
         out_ch: 1
-        ch: 256
+        ch: 128 # 128
         ch_mult: !!python/tuple
-          - 1
           - 2
+          - 4
         num_res_blocks: 2
         attn_resolutions: [ ]
         dropout: 0.0
 
       lossconfig:
-        target: torch.nn.Identity
+        target: torch.nn.Identity  # vqperceptual.VQLPIPSWithDiscriminator
 
   BB:
     optimizer:
-      weight_decay: 0.0
+      weight_decay: 0.01
       optimizer: 'Adam'
-      lr: 1.e-4
+      lr: 2.e-5
       beta1: 0.9
 
     lr_scheduler:
@@ -94,7 +94,7 @@ model:
     params:
       mt_type: 'linear' # options {'linear', 'sin'}
       objective: 'grad' # options {'grad', 'noise', 'ysubx'}
-      loss_type: 'l1' # options {'l1', 'l2'}
+      loss_type: 'l2' # options {'l1', 'l2'}
 
       skip_sample: True
       sample_type: 'linear' # options {"linear", "sin"}
@@ -105,25 +105,24 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 128
-        in_channels: 64
+        image_size: 128 # 64
+        in_channels: 16 # 32
         model_channels: 128
-        out_channels: 32
+        out_channels: 8 # 32
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
+          - 128
+          - 64
           - 32
-          - 16
-          - 8
         channel_mult: !!python/tuple
           - 1
-          - 2
           - 4
           - 8
-        conv_resample: True
+        conv_resample: False
         dims: 2
         num_heads: 8
         num_head_channels: 64
-        use_scale_shift_norm: False
+        use_scale_shift_norm: True
         resblock_updown: False
         use_spatial_transformer: False
         context_dim:
