--- a/configs/Template-BBDM.yaml
+++ b/configs/Template-BBDM.yaml
@@ -1,10 +1,10 @@
 # Brownian Bridge Diffusion Model Template(Pixel Space)
 runner: "BBDMRunner"
 training:
-  n_epochs: 1000
-  n_steps: 990000
-  save_interval: 50
-  sample_interval: 1
+  n_epochs: 4000
+  n_steps: 3960000
+  save_interval: 100
+  sample_interval: 20
   validation_interval: 1
   accumulate_grad_batches: 1
 
@@ -17,10 +17,14 @@ data:
   dataset_type: 'custom_aligned'
   dataset_config:
     dataset_path: '/home/simone.sarrocco/thesis/project/models/diffusion_model/BBDM/data'
-    image_size: 248
+    image_size: 496
     channels: 1
-    to_normal: True
-    flip: False
+    to_normal: False
+    transform: True
+    resize: False
+    gaussian_noise: False
+    clip: False
+    blur: False
   train:
     batch_size: 1
     shuffle: True
@@ -29,10 +33,10 @@ data:
     shuffle: False
   test:
     batch_size: 1
-    # shuffle: False
+    shuffle: False
 
 model:
-  model_name: "BrownianBridge" # part of result path
+  model_name: "BrownianBridge2" # part of result path
   model_type: "BBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -53,9 +57,9 @@ model:
 
   BB:
     optimizer:
-      weight_decay: 0.000
+      weight_decay: 0.0
       optimizer: 'Adam'
-      lr: 1.e-5
+      lr: 2.e-5
       beta1: 0.9
 
     lr_scheduler:
@@ -68,7 +72,7 @@ model:
     params:
       mt_type: 'linear' # options {'linear', 'sin'}
       objective: 'grad' # options {'grad', 'noise', 'ysubx'}
-      loss_type: 'l1' # options {'l1', 'l2'}
+      loss_type: 'l2' # options {'l1', 'l2'}
 
       skip_sample: True
       sample_type: 'linear' # options {"linear", "sin"}
@@ -79,17 +83,18 @@ model:
       max_var: 1.0 # maximum variance
 
       UNetParams:
-        image_size: 256
+        image_size: 512
         in_channels: 1
-        model_channels: 64
+        model_channels: 128
         out_channels: 1
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
+          - 128
+          - 64
           - 32
-          - 16
-          - 8
         channel_mult: !!python/tuple
           - 1
+          - 2
           - 4
           - 8
         conv_resample: True
