--- a/configs/Template-LBBDM-f4.yaml
+++ b/configs/Template-LBBDM-f4.yaml
@@ -36,7 +36,7 @@ data:
     shuffle: False
 
 model:
-  model_name: "LBBDM-latest-9th" # part of result path
+  model_name: "LBBDM-latest-10th" # part of result path
   model_type: "LBBDM" # specify a module
   latent_before_quant_conv: False
   normalize_latent: False
@@ -79,7 +79,7 @@ model:
 
   BB:
     optimizer:
-      weight_decay: 0.01
+      weight_decay: 0.0
       optimizer: 'Adam'
       lr: 2.e-5
       beta1: 0.9
@@ -106,8 +106,8 @@ model:
 
       UNetParams:
         image_size: 128 # 64
-        in_channels: 16 # 32
-        model_channels: 128
+        in_channels: 8 # 32
+        model_channels: 256
         out_channels: 8 # 32
         num_res_blocks: 2
         attention_resolutions: !!python/tuple
@@ -116,6 +116,7 @@ model:
           - 32
         channel_mult: !!python/tuple
           - 1
+          - 2
           - 4
           - 8
         conv_resample: False
@@ -126,4 +127,4 @@ model:
         resblock_updown: False
         use_spatial_transformer: False
         context_dim:
-        condition_key: "SpatialRescaler" # options {"SpatialRescaler", "first_stage", "nocond"}
+        condition_key: "nocond" # options {"SpatialRescaler", "first_stage", "nocond"}
